@@ -141,10 +141,7 @@ enum return_type try_with_directory(char *directory, char *method_live, char *me
 		add_to_env("ISOPATH", location_full);
 		add_to_env("METHOD", method_iso);
 	} else {
-		int offset = strncmp(location_full, IMAGE_LOCATION_DIR, sizeof(IMAGE_LOCATION_DIR) - 1) == 0 ? sizeof(IMAGE_LOCATION_DIR) - 1 : 0;
-		log_message("assuming %s is a mirror tree", location_full + offset);
-
-		symlink(location_full + offset, IMAGE_LOCATION);
+		create_IMAGE_LOCATION(location_full);
 		add_to_env("METHOD", method_live);
 	}
 
