@@ -1,3 +1,6 @@
+- if you give nfs directory xxx, try to use xxx/ARCH
+- handle cdroms with and without ARCH at the root
+
 1.15:
 - ask loading modules from /modules if needed
 - read modules description from /modules/modules.description
